updated the deployer, updated weavegitops and updated the cluster issuer

--- a/00-setup-demo/flux-repo-src/pr-branch/components/podinfo/deploy.yaml
+++ b/00-setup-demo/flux-repo-src/pr-branch/components/podinfo/deploy.yaml
@@ -4,6 +4,7 @@ metadata:
   name: podinfo
   namespace: ocm-system
 spec:
+  interval: 10s
   sourceRef:
     kind: Configuration
     name: podinfo
