--- a/00-setup-demo/flux-repo-src/pr-branch/components/weave-gitops/deploy.yaml
+++ b/00-setup-demo/flux-repo-src/pr-branch/components/weave-gitops/deploy.yaml
@@ -4,6 +4,7 @@ metadata:
   name: weave-gitops
   namespace: ocm-system
 spec:
+  interval: 10s
   sourceRef:
     kind: Configuration
     name: weave-gitops
