--- a/00-setup-demo/manifests/cert-manager/cluster_issuer.yaml
+++ b/00-setup-demo/manifests/cert-manager/cluster_issuer.yaml
@@ -1,15 +1,15 @@
 apiVersion: cert-manager.io/v1
 kind: ClusterIssuer
 metadata:
-  name: mpas-bootstrap-issuer
+  name: bootstrap-issuer
 spec:
   selfSigned: {}
 ---
 apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
-  name: mpas-bootstrap-certificate
-  namespace: cert-manager
+  name: bootstrap-certificate
+  namespace: ocm-system
 spec:
   # this is discouraged but required by ios
   commonName: cert-manager-ocm-tls
@@ -34,14 +34,14 @@ spec:
     encoding: PKCS8
     size: 2048
   issuerRef:
-    name: mpas-bootstrap-issuer
+    name: bootstrap-issuer
     kind: ClusterIssuer
     group: cert-manager.io
 ---
 apiVersion: cert-manager.io/v1
 kind: ClusterIssuer
 metadata:
-  name: mpas-certificate-issuer
+  name: certificate-issuer
 spec:
   ca:
     secretName: ocm-registry-tls-certs
