--- a/00-setup-demo/flux-repo-src/pr-branch/components/podinfo/component_version.yaml
+++ b/00-setup-demo/flux-repo-src/pr-branch/components/podinfo/component_version.yaml
@@ -7,7 +7,13 @@ spec:
   interval: 30s
   component: ocm.software/demos/podinfo
   repository:
+    url: gitea.ocm.dev/software-provider
+    secretRef:
+      name: gitea-registry-credentials
+  destination:
     url: gitea.ocm.dev/software-consumer
+    secretRef:
+      name: gitea-registry-credentials
   version:
     semver: ">=v1.0.0"
   verify:
