added capacitor as a deployment

--- a/00-setup-demo/flux-repo-src/pr-branch/components/capacitor/deploy.yaml
+++ b/00-setup-demo/flux-repo-src/pr-branch/components/capacitor/deploy.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   interval: 10s
   sourceRef:
-    kind: Configuration
+    kind: Resource
     name: capacitor
   kustomizationTemplate:
     interval: 1m0s
