--- a/00-setup-demo/capacitor/src/flux/kustomization.yaml
+++ b/00-setup-demo/capacitor/src/flux/kustomization.yaml
@@ -1,16 +1,5 @@
-apiVersion: kustomize.toolkit.fluxcd.io/v1
+apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-metadata:
-  name: capacitor
-  namespace: flux-system
-spec:
-  targetNamespace: flux-system
-  interval: 1h
-  retryInterval: 2m
-  timeout: 5m
-  wait: true
-  prune: true
-  path: "./"
-  sourceRef:
-    kind: OCIRepository
-    name: capacitor
+resources:
+- kustomize.yaml
+- oci_repository.yaml
