--- a/00-setup-demo/manifests/capacitor.yaml
+++ b/00-setup-demo/manifests/capacitor.yaml
@@ -47,3 +47,18 @@ spec:
   sourceRef:
     kind: OCIRepository
     name: capacitor
+---
+apiVersion: networking.k8s.io/v1
+kind: NetworkPolicy
+metadata:
+  name: capacitor-ingress
+  namespace: flux-system
+spec:
+  policyTypes:
+    - Ingress
+  ingress:
+    - from:
+      - namespaceSelector: {}
+  podSelector:
+    matchLabels:
+      app.kubernetes.io/instance: capacitor
